<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>it.strazz.primefaces</groupId>
	<artifactId>primefaces-reflection-crud</artifactId>
	<packaging>war</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>dynamic-data-table-example Maven Webapp</name>
	<url>http://maven.apache.org</url>


	<properties>
		<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <primefaces.core.version>13.0.3</primefaces.core.version>
        <primefaces.extensions.version>13.0.3</primefaces.extensions.version>
        
        <apache-faces.version>4.0.1</apache-faces.version>
        
        <!--
        <maven.compiler.target>11</maven.compiler.target>
        -->
        
        <maven.compiler.release>11</maven.compiler.release>
        
	</properties>
	
	<dependencies>
		
		<dependency>
			<groupId>org.primefaces</groupId>
			<artifactId>primefaces</artifactId>
			<version>${primefaces.core.version}</version>
            <classifier>jakarta</classifier>
		</dependency>

		<dependency>
			<groupId>org.primefaces.extensions</groupId>
			<artifactId>primefaces-extensions</artifactId>
			<version>${primefaces.extensions.version}</version>
            <classifier>jakarta</classifier>
		</dependency>
        
        <dependency>
            <groupId>org.apache.myfaces.core</groupId>
            <artifactId>myfaces-api</artifactId>
            <version>${apache-faces.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.myfaces.core</groupId>
            <artifactId>myfaces-impl</artifactId>
            <version>${apache-faces.version}</version>
            <scope>compile</scope>
        </dependency>
        
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
			<version>5.0.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.4</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.14.0</version>
		</dependency>
        
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>2.1.1</version>
        </dependency>

        <dependency>
            <groupId>jakarta.enterprise</groupId>
            <artifactId>jakarta.enterprise.cdi-api</artifactId>
            <version>3.0.1</version>
        </dependency>
        
        <!-- CDI 2.0 Impl http://fritzthecat-blog.blogspot.com/2019/08/jsf-23-maven-project-in-eclipse.html -->
        
        <dependency>
            <groupId>org.jboss.weld.servlet</groupId>
            <artifactId>weld-servlet-core</artifactId>
            <version>4.0.3.Final</version>
        </dependency>
        
	</dependencies>
	<build>
		<finalName>${project.artifactId}</finalName>
        
        <plugins>
            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>11.0.18</version>
                <configuration>
                    <webApp>
                        <contextPath>/primefaces-reflection-crud</contextPath>
                        <overrideDescriptors>src/main/webapp/WEB-INF/web-overwrite.xml</overrideDescriptors>
                    </webApp>                    
                    <stopPort>9966</stopPort>
                    <stopKey>foo</stopKey>
                    <httpConnector>
                        <port>9002</port>
                    </httpConnector>
                    <scan>5</scan>
                </configuration>
            </plugin>
            
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>src/main/webapp</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>        
	</build>
</project>
